LAB12/spec-httpd-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: lab12-httpd-deployment
   labels:
    app: web-httpd
spec:
    replicas: 2
    selector:
        matchLabels:
            app: web-httpd
    template:
        metadata:
            labels:
                app: web-httpd
        spec:
            containers:
            - name: web-httpd
              image: httpd:alpine
              ports:
              - containerPort: 80
