LAB12/spec-nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: lab12-nginx-deployment
   labels:
    app: web-nginx
spec:
    replicas: 2
    selector:
        matchLabels:
            app: web-nginx
    template:
        metadata:
            labels:
                app: web-nginx
        spec:
            containers:
            - name: web-nginx
              image: nginx:alpine
              ports:
              - containerPort: 80
