LAB12/app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app1: web
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app2: web
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: web1
  labels:
    app1: web
spec:
  containers:
  - name: nginx
    image: nginx:1.21-alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: web2
  labels:
    app2: web
spec:
  containers:
  - name: nginx
    image: httpd:2.4-alpine
