LAB12/spec-web-httpd-service.yml
apiVersion: v1
kind: Service
metadata:
   name: lab12-httpd-service
spec:
  selector:
    app: web-httpd
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
