LAB12/spec-web-nginx-service.yml
apiVersion: v1
kind: Service
metadata:
   name: lab12-nginx-service
spec:
  selector:
    app : web-nginx
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
