LAB12/correction_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-domain
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - host: dep51.formation.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service1
            port:
              number: 80
  - host: dep52.formation.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service2
            port:
              number: 80
