LAB12/ingresss-domain.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-domain-lab12
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: user5a.formation.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service1
            port:
              number: 80
  - host: user5b.formation.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service2
            port:
              number: 80
